# iw-maradeurs-map

./: README.md
.github/workflows/: build-server.yml
app/maradeurs_map/: README.md  pubspec.yaml
app/maradeurs_map/android/app/: build.gradle
app/maradeurs_map/android/app/src/debug/: AndroidManifest.xml
app/maradeurs_map/android/app/src/main/: AndroidManifest.xml
app/maradeurs_map/android/app/src/main/kotlin/com/example/maradeurs_map/: MainActivity.kt
app/maradeurs_map/ios/Runner/: Info.plist
app/maradeurs_map/ios/Runner.xcodeproj/: project.pbxproj
app/maradeurs_map/lib/: helper.dart  main.dart
app/maradeurs_map/linux/: CMakeLists.txt  my_application.cc
app/maradeurs_map/macos/Runner.xcodeproj/: project.pbxproj
app/maradeurs_map/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/maradeurs_map/macos/Runner/Configs/: AppInfo.xcconfig
app/maradeurs_map/test/: widget_test.dart
app/maradeurs_map/web/: index.html  manifest.json
app/maradeurs_map/windows/: CMakeLists.txt
app/maradeurs_map/windows/runner/: Runner.rc  main.cpp
server/: pyproject.toml  requirements.txt
server/docker/: Dockerfile  compose.dev.yml  compose.yml
server/iw_maradeurs_map/: __init__.py  __main__.py  server.py  triangulation.py
